--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portifólio</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="/assets/Barbie.jpeg" type="image/x-icon">
 
 </head>
 
