--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <a href="#home" class="logo">Nycole
-            <span>Rodrigues</span></a>
+            <span>Costa</span></a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
@@ -36,22 +36,17 @@
         <div class="home-content">
             <h1>Oi, sou <span>Nycole</span></h1>
             <h3 class="text-animation"> Sou <span></span> </h3>
-            <p>Lorem ipsum dolor sit amet
-                consectetur adipisicing elit.
-                Harum veniam reiciendis ratione
-                neque in adipisci corrupti minus
-                praesentium rerum molestiae
-                vel ullam commodi, architecto
-                non quo a perferendis sed ipsam.</p>
+            <p>Olá, bem vindo ao meu portifólio.</p>
 
             <div class="social-icons">
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-gmail'></i></a>
+                <a href="https://www.linkedin.com/in/nycole-costa-b05952223/" target="_blank"><i
+                        class='bx bxl-linkedin'></i></a>
+                <a href="https://www.instagram.com/nycolemcr/" target="_blank"><i class='bx bxl-instagram'></i></a>
+                <a href="https://github.com/nycolerodrigues" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="mailto:nycolec.rodrigues@gmail.com" target="_blank"><i class='bx bxl-gmail'></i></a>
             </div>
 
-            <a href="#" class="bnt">Contate-me</a>
+            <a href="#contatos" class="bnt">Vamos conversar?</a>
 
         </div>
     </section>
@@ -60,41 +55,150 @@
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
             <h3 class="text-animation"><span></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam repellat eum quod veritatis, optio qui
-                doloribus aspernatur, voluptatum, velit temporibus ex neque incidunt dolorem quibusdam officiis tempore
-                deserunt soluta voluptates!</p>
-            <a href="#" class="bnt">Leia Mais</a>
+            <p> Me chamo Nycole, tenho 20 anos e sou estudante de Ciência da Computação na UFMA. Sou ex-intercâmbista do
+                programa IEMA no Mundo e tenho um cachorro chamado Frederico, adoro assistir séries e ouvir música.
+                Possuo um grande interesse por desenvolvimeto Back-end e uma leve curiosidade por desenvolvimeto mobile,
+                são habilidades que estão em constante desenvolvimento. </p>
+
         </div>
         <div class="about-img">
             <img src="/assets/fotoDePerfil1.png" alt="Foto de nycole">
         </div>
     </section>
 
+
     <section class="habilidades" id="habilidades">
-        <div class="about-content">
-            <h2 class="heading">Habilidades<span></span></h2>
-            <h3 class="text-animation">Tecnologias</h3>
-            <div class="social-icons">
+        <h2 class="heading">Habilidades</h2>
+        <div class="habilidades-container">
+            <div class="habilidades-box">
+                <div class="habilidades-info">
+                    <h4>Tecnologias</h4>
+                    <div class="social-icons">
+                        <a href="#" target="_blank"><i class='bx bxl-html5'></i></a>
+                        <a href="#" target="_blank"><i class='bx bxl-css3'></i></a>
+                        <a href="#" target="_blank"><i class='bx bxl-javascript'></i></a>
+                        <a href="#" target="_blank"><i class='bx bxl-python'></i></a>
+                        <a href="#" target="_blank"><i class='bx bxl-java'></i></a>
+                        <a href="#" target="_blank"><i class='bx bxl-figma'></i></a>
+                        <a href="#" target="_blank"><i class='bx bxl-git'></i></a>
+                        <a href="#" target="_blank"><i class='bx bxl-github'></i></a>
 
-                <a href="#"><i class='bx bxl-java'></i></a>
-                <a href="#"><i class='bx bxl-python'></i></a>
-                <a href="#"><i class='bx bxl-html5'></i></a>
-                <a href="#"><i class='bx bxl-css3'></i></a>
-                <a href="#"><i class='bx bxl-javascript'></i></a>
-                <a href="#"><i class='bx bxl-figma'></i></a>
+                    </div>
+                    <h4>Idiomas</h4>
+
+                    <h5>Espanhol - Avançado</h5>
+
+
+                    <h5>Inglês - Básico</h5>
+                </div>
             </div>
-
-            <div>
-
-                <h3 class="text-animation">Idiomas</h3>
-
-                <span class="">Espanhol - avançado </span>
-                
-                <span class="">Inglês - básico </span>
-            </div>
-
-        <div/>
+        </div>
+        <br>
+        <br>
+        <a href="https://drive.google.com/drive/folders/1ji7JsZmcUt0wJt7o1X5tWTrgTRVEM0bl?usp=drive_link"
+            target="_blank" class="bnt">Certificados</a>
     </section>
+
+
+    <section class="projetos" id="projetos">
+        <div class="projetos-box">
+            <h2 class="heading">Projetos</h2>
+            <div class="wrapper">
+                <div class="projetos-item">
+                    <img src="/assets/capivara.jpg" alt="">
+                    <h2>Space Burrico</h2>
+                    <div class="rating">
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                    </div>
+                    <p>Jogo da disciplina de Algoritmos 1, feito em Python utilizando a biblioteca Pygame.</p>
+                    <a href="https://github.com/nycolerodrigues/space-burrico" target="_blank" class="bnt">Acesse
+                        aqui</a>
+                </div>
+
+                <div class="projetos-item">
+                    <img src="/assets/capivara.jpg" alt="">
+                    <h2>Cofo Genérico</h2>
+                    <div class="rating">
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                    </div>
+                    <p>Trabalho de implementação da cadeira de Estrutura de dados I feito em C.</p>
+                    <a href="https://github.com/nycolerodrigues/TAD-COFO-GENERICO" target="_blank" class="bnt">Acesse
+                        aqui</a>
+                </div>
+
+                <div class="projetos-item">
+                    <img src="/assets/capivara.jpg" alt="">
+                    <h2>Formulário de Incrição</h2>
+                    <div class="rating">
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                        <i class='bx bxs-heart' id="heart"></i>
+                    </div>
+                    <p>Formulário de inscrição feito em HTML e CSS para o desafio 2 do programa trilhas inova.</p>
+
+                    <a href="https://github.com/nycolerodrigues/Desafio-2-trilhas-inova" target="_blank"
+                        class="bnt">Acesse aqui</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="contatos" id="contatos">
+        <h2 class="heading">Contate-<span>Me</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Nome">
+                <input type="email" placeholder="Email">
+            </div>
+            <div class="input-box">
+                <input type="nuber" placeholder="Telefone">
+                <input type="text" placeholder="Assunto">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Sua Mensagem"></textarea>
+            <input type="submit" value="Enviar Mensagem" class="bnt">
+        </form>
+    </section>
+
+    <footer class="footer">
+        <div class="social">
+            <a href="https://www.linkedin.com/in/nycole-costa-b05952223/" target="_blank"><i
+                    class='bx bxl-linkedin'></i></a>
+            <a href="https://www.instagram.com/nycolemcr/" target="_blank"><i class='bx bxl-instagram'></i></a>
+            <a href="https://github.com/nycolerodrigues" target="_blank"><i class='bx bxl-github'></i></a>
+            <a href="mailto:nycolec.rodrigues@gmail.com" target="_blank"><i class='bx bxl-gmail'></i></a>
+            <a href="https://wa.me/5598984590983?text=Olá%20Nycole,%20gostaria%20de%20entrar%20em%20contato%20com%20você."
+                target="_blank"><i class='bx bxl-whatsapp'></i></a>
+        </div>
+        <ul class="list">
+            <li>
+                <a href="#contatos">FAQ</a>
+            </li>
+            <li>
+                <a href="#habilidades">Habilidades</a>
+            </li>
+            <li>
+                <a href="#about">Sobre</a>
+            </li>
+            <li>
+                <a href="#projetos">Projetos</a>
+            </li>
+        </ul>
+        <p class="copyrigth"> © Nycole Rodrigues | Todos os Direitos Reservados</p>
+    </footer>
+
+    <script src="/script/script.js"></script>
 </body>
 
 </html>
