--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="home-content">
             <h1>Oi, sou <span>Nycole</span></h1>
             <h3 class="text-animation"> Sou <span></span> </h3>
-            <p>Olá, bem vindo ao meu portifólio.</p>
+            <p>Bem vindo ao meu portifólio.</p>
 
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/nycole-costa-b05952223/" target="_blank"><i
