--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 
 <head>
+
+    <!-- Metadados -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
@@ -12,6 +14,8 @@
 </head>
 
 <body>
+
+    <!-- Cabeçalho -->
     <header class="header">
         <a href="#home" class="logo">Nycole
             <span>Costa</span></a>
@@ -27,6 +31,7 @@
         </nav>
     </header>
 
+    <!-- Seção Home -->
     <section class="home" id="home">
 
         <div class="home-img">
@@ -51,6 +56,7 @@
         </div>
     </section>
 
+    <!-- Seção Sobre -->
     <section class="about" id="about">
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
@@ -67,6 +73,7 @@
     </section>
 
 
+    <!-- Seção Habilidades -->
     <section class="habilidades" id="habilidades">
         <h2 class="heading">Habilidades</h2>
         <div class="habilidades-container">
@@ -99,7 +106,7 @@
             target="_blank" class="bnt">Certificados</a>
     </section>
 
-
+    <!-- Seção Projetos -->
     <section class="projetos" id="projetos">
         <div class="projetos-box">
             <h2 class="heading">Projetos</h2>
@@ -153,7 +160,7 @@
         </div>
     </section>
 
-
+    <!-- Seção Contatos -->
     <section class="contatos" id="contatos">
         <h2 class="heading">Contate-<span>Me</span></h2>
 
@@ -171,6 +178,7 @@
         </form>
     </section>
 
+    <!-- Rodapé -->
     <footer class="footer">
         <div class="social">
             <a href="https://www.linkedin.com/in/nycole-costa-b05952223/" target="_blank"><i
@@ -198,6 +206,7 @@
         <p class="copyrigth"> © Nycole Rodrigues | Todos os Direitos Reservados</p>
     </footer>
 
+    <!-- Scripts -->
     <script src="/script/script.js"></script>
 </body>
 
